--- a/typeposter/index.html
+++ b/typeposter/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <title>Krystal Figueroa Print Poster</title>
 <link rel="stylesheet" href="https://use.typekit.net/uiu5kgo.css">
-<link href="styles.css" rel="stylesheet" type="text/css">
+<link href="assets/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 
